# gosapDemo

./: Htsoapserver.sln
HtSoapClient/: CMakeLists.txt  HTSAPServer.h  HTSAPServer.wsdl  HtSoapClient.vcxproj  HtSoapClient.vcxproj.filters  ifAA.cpp  ifChengDao.cpp  ifChengDao.h  main.cpp  soapC.cpp  soapClient.cpp  soapH.h  soapStub.h
HtSoapClient/Debug/: vc120.idb
HtSoapClient/Debug/HtSoapClient.tlog/: CL.read.1.tlog  CL.write.1.tlog  HtSoapClient.lastbuildstate  HtSoapClient.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HtSoapClient/Release/HtSoapClient.tlog/: CL.read.1.tlog  CL.write.1.tlog  HtSoapClient.lastbuildstate  cl.command.1.tlog
Htsoapserver/: HTSAPServerSoapBinding.nsmap  Htsoapserver.vcxproj  Htsoapserver.vcxproj.filters  htserver.cpp  htserver.h  main.cpp  ns.h  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h  stdafx.h
Htsoapserver/Debug/: vc120.idb
Htsoapserver/Debug/Htsoapserver.tlog/: CL.read.1.tlog  CL.write.1.tlog  Htsoapserver.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Htsoapserver/Release/Htsoapserver.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
